--- a/TestSandbox.App/TestSandbox.App.csproj
+++ b/TestSandbox.App/TestSandbox.App.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Video.cs" />
+    <Compile Include="Models\VideoData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\VideoService.cs" />
