--- a/TestSandbox.Tests/TestSandbox.Tests.csproj
+++ b/TestSandbox.Tests/TestSandbox.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSandbox.App\Services\VideoServiceTests\BaseVideoServiceTests.cs" />
     <Compile Include="TestSandbox.App\Services\VideoServiceTests\GetNextVideoNameTests.cs" />
+    <Compile Include="TestSandbox.App\Services\VideoServiceTests\GetVideoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestSandbox.App\TestSandbox.App.csproj">
